llvmpipe: fix broken stencil writemask

Fixes http://bugs.freedesktop.org/show_bug.cgi?id=32070